# visibex

./: README.md  visibex.org
bex-api/: Cargo.toml
bex-api/src/: main.rs
bex_web/: .gitignore  Cargo.toml
vue-bex/: package-lock.json  package.json  vite.config.ts
vue-bex/src/: App.vue
